# pico-c-mcp3008

./: LICENSE  README.md  mcp3008.c  mcp3008.h
example/: CMakeLists.txt  test.c
